so many bug fixes to alignments and changes to display of backend wide and full blocks

--- a/src/block-globals.editor.scss
+++ b/src/block-globals.editor.scss
@@ -62,20 +62,6 @@
 	z-index: 10;
 }
 
-/* adjusts initial line height for Gutenberg editor so it lines up on blank screens */
-.editor-default-block-appender textarea.editor-default-block-appender__content {
-	// line-height: 1.8;
-}
-
-.c9-grid .block-editor-block-list__layout .wp-block.is-selected>.wp-block>[data-type]>div>.block-editor-inner-blocks>.block-editor-block-list__layout>.wp-block:not(.is-selected)>.wp-block:before,
-.block-editor-block-list__layout .wp-block.is-selected>.wp-block>[data-type]>div>.block-editor-inner-blocks>.block-editor-block-list__layout>.wp-block:not(.is-selected)>.wp-block:before,
-.c9-grid .block-editor-block-list__layout .wp-block.is-selected>.wp-block>[data-type]>div>.block-editor-inner-blocks>.block-editor-block-list__layout>.wp-block:not(.is-selected)>.wp-block:before,
-.c9-grid .block-editor-block-list__layout .wp-block.is-selected>.wp-block>[data-type]>div>.wp-block-cover__inner-container>.block-editor-inner-blocks>.block-editor-block-list__layout>.wp-block:not(.is-selected)>.wp-block:before,
-.c9-grid .block-editor-block-list__layout .wp-block.is-selected>.wp-block>[data-type]>div>.wp-block-group__inner-container>.block-editor-inner-blocks>.block-editor-block-list__layout>.wp-block:not(.is-selected)>.wp-block:before,
-[data-type="c9-blocks/grid"] .block-editor-block-list__layout .wp-block.has-child-selected>.wp-block:before {
-	border: 1px dotted #000;
-}
-
 /* leaves just enough room for inbetween block inserter, more closely resembling frontend */
 .editor-styles-wrapper .c9-grid [data-block] {
 	margin-top: 5px;
@@ -93,6 +79,21 @@
 .components-panel__body.plugin-c9-panel .components-button.is-large,
 .block-editor-editor-skeleton__sidebar .components-button.is-small.c9-column-selector-button {
 	height: auto;
+}
+
+/* WP 5.5 bugs from new WP skin */
+.components-button-group .components-button.c9-column-selector-button {
+	display: inline-block;
+	height: auto;
+	border: none;
+	padding: 0;
+	box-shadow: none;
+	margin-right: 8px;
+}
+
+.components-panel__body>div>button:first-child~span {
+	display: block;
+	margin-top: 10px;
 }
 
 .components-panel__body.plugin-c9-panel .plugin-c9-panel-button {
@@ -207,7 +208,7 @@
 	max-width: 1140px;
 }
 
-@media (min-width: 576px) {
+@media only screen and (min-width: 576px) {
 
 	.editor-post-title,
 	.editor-post-title__block {
