--- a/src/blocks/block-grid-container/styles/editor.scss
+++ b/src/blocks/block-grid-container/styles/editor.scss
@@ -449,6 +449,12 @@
 		width: 100vw;
 	}
 
+	// WP 5.5 updates
+	body.folded .is-sidebar-opened .editor-styles-wrapper .is-root-container .wp-block[data-type="c9-blocks/grid"] {
+		max-width: calc(100vw - 280px);
+		width: calc(100vw - 280px);
+	}
+
 	body.folded.post-type-page .is-sidebar-opened .editor-styles-wrapper .wp-block[data-type="c9-blocks/grid"] {
 		width: calc(100vw - 280px);
 	}
@@ -482,6 +488,14 @@
 		max-width: calc(100vw - 116px);
 		margin-left: calc((-100vw + 100% + 116px) / 2);
 		margin-right: calc((-100vw + 100% + 116px) / 2);
+	}
+
+	// WP 5.5 update
+	body.folded .edit-post-layout:not(.is-sidebar-opened) .editor-styles-wrapper .is-root-container .wp-block[data-type="c9-blocks/grid"] {
+		margin-left: 0;
+		margin-right: 0;
+		width: 100vw;
+		max-width: 100vw;
 	}
 
 	// Narrow container width with all 4 editing screen variations
@@ -591,6 +605,14 @@
 		margin-right: calc((-100vw + 280px + 100% + 12px + 116px) / 2);
 	}
 
+	/* WP 5.5 updates */
+	body.folded .is-sidebar-opened .editor-styles-wrapper .is-root-container>.wp-block[data-type="c9-blocks/grid"] {
+		margin-left: 0px;
+		margin-right: 0px;
+		width: calc(100vw - 280px);
+		max-width: calc(100vw - 280px);
+	}
+
 	body:not(.folded) .edit-post-layout:not(.is-sidebar-opened) .block-editor-editor-skeleton__content .editor-styles-wrapper .wp-block[data-type="c9-blocks/grid"] .container-fluid[data-align="full"],
 	body.folded .edit-post-layout:not(.is-sidebar-opened) .block-editor-editor-skeleton__content .editor-styles-wrapper .wp-block[data-type="c9-blocks/grid"] .container-fluid[data-align="full"] {
 		margin-left: calc((-100vw + 100% + 116px) / 2);
@@ -600,7 +622,8 @@
 	body.folded .edit-post-layout:not(.is-sidebar-opened) .editor-styles-wrapper .wp-block[data-type="c9-blocks/grid"] {
 		margin-left: 0;
 		margin-right: 0;
-		width: calc(100vw - 116px);
+		width: 100vw;
+		max-width: 100vw;
 	}
 
 	.c9-grid>.block-editor-inner-blocks>.block-editor-block-list__layout {
@@ -629,7 +652,7 @@
 	body:not(.folded) .is-sidebar-opened .editor-styles-wrapper .wp-block[data-type="c9-blocks/grid"] .container,
 	body.folded .is-sidebar-opened .editor-styles-wrapper .wp-block[data-type="c9-blocks/grid"] .container {
 		width: 1140px;
-		max-width: calc(100vw - 280px - 116px - 6%);
+		max-width: 1140px;
 		margin-left: 0;
 		margin-right: 0;
 	}
