--- a/src/blocks/block-posts-grid/styles/editor.scss
+++ b/src/blocks/block-posts-grid/styles/editor.scss
@@ -17,7 +17,6 @@
 
 .padding-top-wrapper,
 .margin-top-wrapper {
-	-webkit-box-pack: center;
 	justify-content: center;
 }
 
@@ -27,7 +26,6 @@
 .margin-sides-wrapper,
 .margin-top-wrapper,
 .margin-bottom-wrapper {
-	display: -webkit-box;
 	display: flex;
 }
 
@@ -43,7 +41,6 @@
 .padding-sides-wrapper,
 .margin-sides-wrapper {
 	justify-content: space-around;
-	-webkit-box-align: end;
 	align-items: flex-end;
 }
 
@@ -53,19 +50,16 @@
 }
 
 .padding-wrapper {
-	display: -webkit-box;
 	display: flex;
 }
 
 .padding-bottom-wrapper,
 .margin-bottom-wrapper {
-	-webkit-box-pack: center;
 	justify-content: center;
 	margin-top: 5px;
 }
 
 .padding-wrapper .components-range-control .components-base-control__field {
-	-webkit-box-align: start;
 	align-items: flex-start;
 }
 
@@ -110,7 +104,6 @@
 }
 
 .bgSize .components-base-control__field {
-	-webkit-box-pack: justify;
 	justify-content: space-between;
 	margin-bottom: 15px !important;
 }
@@ -160,14 +153,12 @@
 .container-narrow .c9-layout-column-wrap-admin>.block-editor-inner-blocks>.block-editor-block-list__layout,
 .container-fluid .c9-layout-column-wrap-admin>.block-editor-inner-blocks>.block-editor-block-list__layout {
 	width: 100%;
-	display: -webkit-box;
 	display: flex;
 }
 
 .container .c9-layout-column-wrap-admin>.block-editor-inner-blocks>.block-editor-block-list__layout .block-editor-block-list__block,
 .container-narrow .c9-layout-column-wrap-admin>.block-editor-inner-blocks>.block-editor-block-list__layout .block-editor-block-list__block,
 .container-fluid .c9-layout-column-wrap-admin>.block-editor-inner-blocks>.block-editor-block-list__layout .block-editor-block-list__block {
-	-webkit-box-flex: 1;
 	flex-grow: 1;
 	flex-basis: 0px;
 }
@@ -272,6 +263,18 @@ body .edit-post-layout .editor-styles-wrapper .c9-posts-grid .container-narrow:n
 		margin-right: -44px;
 	}
 
+	// WP 5.5 updates for posts grids in backend
+	body.folded.post-type-page .is-sidebar-opened .editor-styles-wrapper .is-root-container>.wp-block[data-type="c9-blocks/posts-grid"] {
+		max-width: calc(100vw - 280px);
+		margin-left: 0px;
+		margin-right: 0px;
+	}
+
+	// WP 5.5 updates for backend grids in grids
+	body.folded.post-type-page .is-sidebar-opened .editor-styles-wrapper .is-root-container .wp-block[data-type="c9-blocks/grid"] .wp-block[data-type="c9-blocks/posts-grid"] {
+		max-width: calc(100vw - 280px);
+	}
+
 	// compensate for posts grid within container grid (videos page template)
 	body.folded .is-sidebar-opened .editor-styles-wrapper .c9-grid .wp-block[data-type="c9-blocks/posts-grid"] {
 		margin-left: auto;
@@ -347,6 +350,13 @@ body .edit-post-layout .editor-styles-wrapper .c9-posts-grid .container-narrow:n
 		margin-right: calc((-100vw + 116px + 280px) / 2);
 	}
 
+	body.post-type-page .is-sidebar-opened .editor-styles-wrapper .is-root-container .wp-block[data-type="c9-blocks/posts-grid"] .container-fluid[data-align="full"] {
+		margin-left: 0px;
+		margin-right: 0px;
+		min-width: 1000px;
+		max-width: calc(100vw - 280px);
+	}
+
 	body:not(.folded) .edit-post-layout:not(.is-sidebar-opened) .block-editor-editor-skeleton__content .editor-styles-wrapper .wp-block[data-type="c9-blocks/posts-grid"] .container-fluid[data-align="full"],
 	body.folded .edit-post-layout:not(.is-sidebar-opened) .block-editor-editor-skeleton__content .editor-styles-wrapper .wp-block[data-type="c9-blocks/posts-grid"] .container-fluid[data-align="full"] {
 		margin-left: calc((-100vw + 116px) / 2);
@@ -371,6 +381,12 @@ body .edit-post-layout .editor-styles-wrapper .c9-posts-grid .container-narrow:n
 		margin-right: calc((-100vw + 280px + 100% + 12px + 116px) / 2);
 	}
 
+	body.folded.post-type-page .is-sidebar-opened .editor-styles-wrapper .is-root-container>.wp-block[data-type="c9-blocks/posts-grid"] {
+		margin-left: 0;
+		margin-right: 0;
+		width: calc(100vw - 280px);
+	}
+
 	body:not(.folded) .edit-post-layout:not(.is-sidebar-opened) .block-editor-editor-skeleton__content .editor-styles-wrapper .wp-block[data-type="c9-blocks/posts-grid"] .container-fluid[data-align="full"],
 	body.folded .edit-post-layout:not(.is-sidebar-opened) .block-editor-editor-skeleton__content .editor-styles-wrapper .wp-block[data-type="c9-blocks/posts-grid"] .container-fluid[data-align="full"] {
 		margin-left: calc((-100vw + 100% + 116px) / 2);
@@ -383,8 +399,13 @@ body .edit-post-layout .editor-styles-wrapper .c9-posts-grid .container-narrow:n
 		width: calc(100vw - 116px);
 	}
 
+	// WP 5.5 updates for new backend skins
+	body.folded.post-type-page .edit-post-layout:not(.is-sidebar-opened) .editor-styles-wrapper .is-root-container .wp-block[data-type="c9-blocks/posts-grid"] {
+		width: 100vw;
+		max-width: 100vw;
+	}
+
 	.c9-posts-grid>.block-editor-inner-blocks>.block-editor-block-list__layout {
-		-webkit-box-pack: center;
 		justify-content: center;
 	}
 
@@ -422,6 +443,32 @@ body .edit-post-layout .editor-styles-wrapper .c9-posts-grid .container-narrow:n
 		max-width: 1368px;
 		margin-left: auto;
 		margin-right: auto;
+	}
+
+	body.post-type-page .edit-post-layout:not(.is-sidebar-opened) .editor-styles-wrapper .is-root-container .wp-block[data-type="c9-blocks/posts-grid"] .container[data-align="wide"] {
+		width: 1368px;
+		max-width: 1368px;
+		margin-left: 0px;
+		margin-right: 0px;
+	}
+
+	body.post-type-page .edit-post-layout:not(.is-sidebar-opened) .editor-styles-wrapper .is-root-container .wp-block[data-type="c9-blocks/posts-grid"] .container[data-align="wide"]>.wp-block[data-align="wide"] {
+		margin-left: 0;
+		margin-right: 0;
+		max-width: none;
+		width: 1368px;
+	}
+
+	body.post-type-page .is-sidebar-opened .editor-styles-wrapper .is-root-container .wp-block[data-type="c9-blocks/posts-grid"] .container[data-align="wide"] {
+		width: 1368px;
+		max-width: 1368px;
+	}
+
+	body.post-type-page .is-sidebar-opened .editor-styles-wrapper .is-root-container .wp-block[data-type="c9-blocks/posts-grid"] .container[data-align="wide"]>.wp-block[data-align="wide"] {
+		width: auto;
+		margin-left: auto;
+		margin-right: auto;
+		max-width: 1368px;
 	}
 
 	body:not(.folded) .is-sidebar-opened .editor-styles-wrapper .wp-block[data-type="c9-blocks/posts-grid"] .container[data-align="wide"],
